--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "type": "git",
     "url": "git+https://github.com/ivsemenovdev/crm-ng-express-mongodb.git"
   },
-  "keywords": ["express", "angular", "mongoDB"],
+  "keywords": [
+    "express",
+    "angular",
+    "mongoDB"
+  ],
   "author": "Ivan Semyonov",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ivsemenovdev/crm-ng-express-mongodb/issues"
   },
-  "homepage": "https://github.com/ivsemenovdev/crm-ng-express-mongodb#readme"
+  "homepage": "https://github.com/ivsemenovdev/crm-ng-express-mongodb#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
