--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "fullstack app - ng + express + mongoDB",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "node index",
+    "server": "nodemon index"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,8 @@
   "homepage": "https://github.com/ivsemenovdev/crm-ng-express-mongodb#readme",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.21"
   }
 }
