--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^7.0.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
